content/vault/v1.15.x/content/docs/commands/plugin/runtime/register.mdx
---
layout: docs
page_title: plugin runtime register - Command
description: |-
  The "plugin runtime register" command registers a new plugin runtime in Vault's plugin runtime
  catalog.
# START AUTO GENERATED METADATA, DO NOT EDIT
created_at: 2025-07-02T11:30:26-05:00
last_modified: 2025-07-02T11:30:26-05:00
# END AUTO GENERATED METADATA
---

# plugin runtime register

Register a new plugin runtime in the plugin runtime catalog of your Vault instance.

<Note title="Limited type support">
  Support for runtime types is currently limited to `container`.
</Note>

To use a registered plugin runtime, use the `-runtime` option with the
[plugin registration command](/vault/docs/commands/plugin/register).

## Examples

Register a plugin runtime:

```shell-session
$ vault plugin runtime register -type=container -oci_runtime=runc runc
Success! Registered plugin runtime: runc
```

Register a plugin runtime with resource limits:

```shell-session
vault plugin runtime register \
    -type=container \
    -cpu_nanos=100000000 \
  runsc
```

## Usage

The following flags are available in addition to the [standard set of
flags](/vault/docs/commands) included on all commands.

### Command options

- `-type` `(string: <required>)` - Plugin runtime type. Vault currently only
  supports `container` as a runtime type.

- `-cgroup_parent` `(string: "")` - Parent cgroup to set for each container.
  Use `cgroup_parent` to control the total resource usage for a group of plugins.

- `-cpu_nanos` `(int: 0)` - CPU limit to set per container in billionths of a
  CPU core. Defaults to no limit.

- `-memory_bytes` `(int: 0)` - Memory limit to set per container in bytes.
  Defaults to no limit.

- `-oci_runtime` `(string: "")` - Open Container Initiative (OCI) compliant
  container runtime to use. Default is the gVisor OCI runtime, `runsc`.
